--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,38 +1,36 @@
 <!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  {% block meta %}
-  <meta property="og:title" content="{{ self.title() }}">
-  <meta property="og:image" content="/static/img/ha.png">
-  {% endblock %}
-  {% block head %}
-  <title>{% block title %}{% endblock %}</title>
-  <link rel="shortcut icon" href="../static/images/favicon.ico">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
-  <link rel="stylesheet" href="../static/css/styles.css">
-  {% endblock %}
-</head>
-<body>
-<div id="main">
-  {% block main %}{% endblock %}
-</div>
-{% block scripts %}
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    {% block meta %}
+    <meta property="og:title" content="{{ self.title() }}">
+    <meta property="og:image" content="/static/img/ha.png">
+    {% endblock %}
+    {% block head %}
+    <title>{% block title %}The Web Almanac{% endblock %}</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-22381566-3" nonce="{{ csp_nonce() }}"></script>
+    <script nonce="{{ csp_nonce() }}">
+        window.dataLayer = window.dataLayer || [];
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-22381566-3" nonce="{{ csp_nonce() }}"></script>
-<script nonce="{{ csp_nonce() }}">
-    window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
 
-    function gtag() {
-        dataLayer.push(arguments);
-    }
+        gtag('js', new Date());
 
-    gtag('js', new Date());
+        gtag('config', 'UA-22381566-3');
+    </script>
+    <link rel="shortcut icon" href="../static/images/favicon.ico">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
+    <link rel="stylesheet" href="../static/css/styles.css">
+    {% endblock %}
+  </head>
 
-    gtag('config', 'UA-22381566-3');
-</script>
-
-{% endblock %}
-</body>
+  <body>
+    <div id="main">
+      {% block main %}{% endblock %}
+    </div>
+    {% block scripts %}{% endblock %}
+  </body>
 </html>
