--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="{% block lang %}{% endblock %}">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% block meta %}
     <meta property="og:title" content="{{ self.title() }}">
-    <meta property="og:image" content="/static/img/ha.png">
+    <meta property="og:image" content="/static/images/ha.png">
     {% endblock %}
     {% block head %}
     <title>{% block title %}The Web Almanac{% endblock %}</title>
