--- a/src/templates/ja/index.html
+++ b/src/templates/ja/index.html
@@ -1,31 +1,27 @@
 {% extends "ja/base.html" %}
 
 {% block title %}
-The Web Almanac by HTTP Archive
+HTTP ArchiveによるWeb年鑑
 {% endblock %}
 
-{# TODO(MSakamaki): Translate to Japanese. #}
 {% block main %}
 <section>
   <div>
     <img src="../static/images/ha.png" alt="HTTP Archive">
 
     <h1>
-      Introducing the <b>Web Almanac</b>, coming November 2019.
+      2019年11月に発表予定の<b>Web年鑑</b>をご紹介します。
     </h1>
 
     <p>
-      The Web Almanac is HTTP Archive's annual "state of the web" report.
-      Our mission is to combine the powerful analytics of HTTP Archive with the
-      expertise of the web community. The Almanac is made up of four primary
-      sections: page content, user experience, content delivery, and
-      content distribution. Each section is comprised of chapters that explore
-      the state of specific areas like JavaScript usage, accessibility,
-      content management systems, and compression.
+      Web年鑑はHTTP Archiveによる「Webの現状」の年次報告書です。
+      私たちの使命は、HTTP Archiveの強力な分析とWebコミュニティの専門知識を組み合わせることです。
+      年鑑は、ページコンテンツ、ユーザーエクスペリエンス、コンテンツの配付、コンテンツの配布といった4つの主要セクションで構成されています。
+      さらに各セクションは、JavaScriptの使用方法、アクセシビリティ、コンテンツマネジメントシステム、および圧縮などの特定の分野の状況を調査するチャプターで構成されています。
     </p>
 
     <a href="https://github.com/HTTPArchive/almanac.httparchive.org">
-      Learn more
+      さらに詳しく
     </a>
   </div>
 </section>
