--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -28,6 +28,9 @@
   </head>
 
   <body>
+    <div id="navigation">
+      {% block navigation %}{% endblock %}
+    </div>
     <div id="main">
       {% block main %}{% endblock %}
     </div>
