Build a language switcher (#60)
* Update base template, splash pages and add SVG flag icons

* Update stylesheet:
1. Updated current anchor tags' style to be targetted only if it is a child selector of a section tag
2. Removed media query of img
3. Added base styles for generic language switcher

* Remove templates

* Return list of supported languages from backend

* Use native UI elements to present dropdown

* Remove flag SVGs

* Cleanup files
1. Restore img media query style
2. Remove unnecessary parentheses in base.html

* Use existing tuple in validate

* Restore old styles and merge styles for language-switcher

* Address review comments

* Pass supported_languages to all templates with language-switcher

* Add translation for Japanese

* Set absolute paths and generate dynamic URLs properly

--- a/src/static/css/styles.css
+++ b/src/static/css/styles.css
@@ -45,6 +45,15 @@ a:hover {
     color: #667a7d;
 }
 
+.language-switcher {
+    height: 30px;
+    font-size: 1rem;
+    top: 20px;
+    right: 20px;
+    position: absolute;
+    cursor: pointer;
+}
+
 @media (min-width: 800px) {
     img {
         margin-left: -20px;
