Create contributors.json (#57)
* Create contributors.json

* Add data structure and samples. Progress on #51

* Add code to get and display contributors data. Progress on #51

* Remove import jsonify

Co-Authored-By: Rick Viscomi <rviscomi@users.noreply.github.com>

* Update render_template in src/main.py. Progress on #57.

Co-Authored-By: Rick Viscomi <rviscomi@users.noreply.github.com>

* Restructure team data. Progress on #57

* Add method to update contributors. Progress on #57

Co-Authored-By: Rick Viscomi <rviscomi@users.noreply.github.com>

* Declare global variable first

Co-Authored-By: Rick Viscomi <rviscomi@users.noreply.github.com>

* Remove comments

* Add loop to render contributor's team. Progress on #57

Co-Authored-By: Rick Viscomi <rviscomi@users.noreply.github.com>

* make user IDs lowercase

* remove contributors GitHub and Twitter

* import contributors util file. Progress on #57

* Declare global property. Progress on #57.

Co-Authored-By: Rick Viscomi <rviscomi@users.noreply.github.com>

* Delete lines 54 through 64. Progress on #57.

* Delete duplication of @app.route for contributors. Progress on #57.

* Update name of contributors_util in line 33. Progress on #57.

* Make updates so HTML renders. Progress on #57

* Remove src/ from file path. Progress on #57

* Delete comment. Progress on #57

* Repair contributors code. Progress on #57

--- a/src/templates/en/2019/contributors.html
+++ b/src/templates/en/2019/contributors.html
@@ -3,3 +3,16 @@
 {% block title %}
 Contributors | The Web Almanac by HTTP Archive
 {% endblock %}
+
+{% block main %}
+{% for id, contributor in contributors.contributors.items() %}
+<section>
+  <h3>{{ contributor.name }}</h3>
+  <ul>
+    {% for team in contributor.teams %}
+    <li>{{ contributors.teams[team].name }}</li>
+    {% endfor %}
+  </ul>
+</section>
+{% endfor %}
+{% endblock %}
