--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -24,6 +24,7 @@
     <link rel="shortcut icon" href="/static/images/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
     <link rel="stylesheet" href="/static/css/styles.css">
+    {% block styles %}{% endblock %}
     {% endblock %}
     {% if supported_languages is iterable %}
       {% for l in supported_languages %}
