Use normalize.css and organize page-specific css (#118)
* Use normalize.css and organize page-specific css

* Add new file at EOF

--- a/src/static/css/splash.css
+++ b/src/static/css/splash.css
@@ -1,9 +1,8 @@
+/** NOTE: Bulk of the styles to be replaced soon in https://github.com/HTTPArchive/almanac.httparchive.org/issues/106 */
+
 body {
-    overflow-x: hidden;
     font-family: 'Open Sans', sans-serif;
-    font-size: 16px;
     color: #444;
-    margin: 0;
 }
 
 section {
@@ -43,15 +42,6 @@ a:hover {
     background-color: #fff;
     border-color: #667a7d;
     color: #667a7d;
-}
-
-.language-switcher {
-    height: 30px;
-    font-size: 1rem;
-    top: 20px;
-    right: 20px;
-    position: absolute;
-    cursor: pointer;
 }
 
 @media (min-width: 800px) {
