--- a/src/templates/en/splash.html
+++ b/src/templates/en/splash.html
@@ -4,6 +4,10 @@
 The Web Almanac by HTTP Archive
 {% endblock %}
 
+{% block styles %}
+  <link rel="stylesheet" href="/static/css/splash.css">
+{% endblock %}
+
 {% block main %}
 <section>
   <div>
