--- a/src/templates/error/error.html
+++ b/src/templates/error/error.html
@@ -4,6 +4,10 @@
   {% block error %}Unknown Error{% endblock %}
 {% endblock %}
 
+{% block styles %}
+  <link rel="stylesheet" href="/static/css/error.css">
+{% endblock %}
+
 {% block content %}
   <section>
     <div>
