--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -23,7 +23,8 @@
     </script>
     <link rel="shortcut icon" href="/static/images/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800">
-    <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/normalize.css">
+    <link rel="stylesheet" href="/static/css/main.css">
     {% block styles %}{% endblock %}
     {% endblock %}
     {% if supported_languages is iterable %}
