--- a/src/templates/en/2019/methodology.html
+++ b/src/templates/en/2019/methodology.html
@@ -3,3 +3,12 @@
 {% block title %}
 Methodology | The Web Almanac by HTTP Archive
 {% endblock %}
+
+{{% block main %}}
+<h1>Methodology</h1>
+<p>TODO</p>
+
+<h2>Overview of HTTP Archive</h2>
+
+<h2>Analyzing Stylesheets</h2>
+{{% endblock %}}
