--- a/src/templates/en/2019/contributors.html
+++ b/src/templates/en/2019/contributors.html
@@ -5,6 +5,7 @@ Contributors | The Web Almanac by HTTP Archive
 {% endblock %}
 
 {% block styles %}
+{{ super() }}
 <style>
 .contributors {
   margin-top: 100px;
