--- a/src/templates/en/index.html
+++ b/src/templates/en/index.html
@@ -4,28 +4,203 @@
 The Web Almanac by HTTP Archive
 {% endblock %}
 
-{% block main %}
-<section>
-  <div>
-    <img src="../static/images/ha.png" alt="HTTP Archive">
+{% block styles %}
+  <link rel="stylesheet" href="/static/css/index.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins&display=swap">
+{% endblock %}
 
-    <h1>
-      Introducing the <b>Web Almanac</b>, coming November 2019.
-    </h1>
-
-    <p>
-      The Web Almanac is HTTP Archive's annual "state of the web" report.
-      Our mission is to combine the powerful analytics of HTTP Archive with the
-      expertise of the web community. The Almanac is made up of four primary
-      sections: page content, user experience, content delivery, and
-      content distribution. Each section is comprised of chapters that explore
-      the state of specific areas like JavaScript usage, accessibility,
-      content management systems, and compression.
-    </p>
-
-    <a href="https://github.com/HTTPArchive/almanac.httparchive.org">
-      Learn more
-    </a>
-  </div>
-</section>
+{% block content %}
+<div id="home">
+  <header>
+    <section class="nav">
+      <img src="/static/images/home.png" />
+      <nav class="nav-items">
+        <li>
+          <a href="#">Contributors</a>
+        </li>
+        <li>
+          <a href="#">Methodology</a>
+        </li>
+        <div class="select-year">
+          {% if supported_years | length > 1 %}
+            <button>
+              2019 Edition
+            </button>
+            <img src="/static/images/dropdown-arrow.png" />
+          {% endif %}
+        </div>
+      </nav>
+      <div class="explore">
+        <button>
+          Start Exploring
+        </button>
+        {% if language is not none %}
+          <img src="/static/images/{{ language }}.png" />
+        {% else %}
+          <img src="/static/images/English.png" />
+        {% endif %}
+        <select class="language-switcher">
+          {% if supported_languages is iterable %}
+            {% for l in supported_languages %}
+              <option
+                {% if l == language %}selected="selected"{% endif %}
+                value="{{ url_for(request.endpoint, **get_view_args(lang=l.lang_code)) }}">
+                {{ l }}
+              </option>
+            {% endfor %}
+          {% endif %}
+        </select>
+        <img src="/static/images/dropdown-arrow.png" />
+      </div>
+      <img class="menu" src="/static/images/menu.png" />
+    </section>
+    <section class="intro-container">
+      <div class="intro">
+        <h1>Web Almanac</h1>
+        <h2>
+          <b>HTTP Archive's</b> annual<br>
+          <b>state of the web</b> report
+        </h2>
+        <div>
+          Our mission is to combine the raw stats and trends of the HTTP Archive with the expertise of the web community. The Web Almanac is a comprehensive report on the state of the web, backed by real data and trusted web experts. It is comprised of 20 chapters spanning aspects of page content, user experience, publishing, and distribution.
+        </div>
+        <button>
+          Start exploring
+        </button>
+      </div>
+      <div class="intro-year">2019</div>
+      <div class="intro-image">
+        <img class="home-browser" src="/static/images/home-browser.png" />
+        <img class="camada-751" src="/static/images/camada-751.png" />
+        <img class="camada-759" src="/static/images/camada-759.png" />
+        <img class="camada-752" src="/static/images/camada-752.png" />
+      </div>
+    </section>
+  </header>
+  <section class="featured-chapter">
+    <div class="mobile-web">
+      <h1>Featured Chapter</h1>
+      <h2>Mobile Web</h2>
+      <div class="quote-text">
+        <img class="quote" src="/static/images/quote.png" />
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim facilisis gravida neque convallis a cras semper auctor neque.
+      </div>
+      <div class="mobile-web-data">
+        <div class="mobile-web-data-item">
+          <div>36%</div>
+          <div>Lorem ipsum</div>
+        </div>
+        <div class="mobile-web-data-item">
+          <div>120M</div>
+          <div>Lorem ipsum</div>
+        </div>
+        <div class="mobile-web-data-item">
+          <div>07/10</div>
+          <div>Lorem ipsum</div>
+        </div>
+      </div>
+      <button>
+        <b>Read the R2D2C3P0 Chapter</b>
+      </button>
+    </div>
+  </section>
+  <section class="contributors-container">
+    <div class="rectangles"></div>
+    <div class="contributors">
+      <h1>Contributors</h1>
+      <div>
+        The Web Almanac has been made possible by the hard work of the web community. 91 people have volunteered countless hours in the planning, research, writing and production phases.
+      </div>
+      <button>
+        See the contributors
+      </button>
+    </div>
+    <div class="people">
+      <img class="camada-755" src="/static/images/camada-755.png" />
+      <div class="people-number">
+        91
+      </div>
+      <img class="camada-756" src="/static/images/camada-756.png" />
+      <img class="camada-754" src="/static/images/camada-754.png" />
+      <div class="people-text">
+        People
+      </div>
+    </div>
+  </section>
+  <section class="methodology-container">
+    <div class="methodology">
+      <h1>Methodology</h1>
+      <div class="methodology-data">
+        <div class="websites-tested">
+          <div>
+            Websites Tested
+          </div>
+          <div>
+            5.2M
+          </div>
+        </div>
+        <div class="data-processed">
+          <div>
+            Data Processed
+          </div>
+          <div>
+            20.9 TB
+          </div>
+        </div>
+      </div>
+      <div class="methodology-info">
+        Unless otherwise noted, the metrics in all of the 20 chapters of the Web Almanac are sourced from the HTTP Archive dataset. HTTP Archive is a community-run project that has been tracking how the web is built since 2010. Using WebPageTest and Lighthouse under the hood, metadata about nearly 6 million websites are tested monthly and included in a public BigQuery database for analysis. The July 2019 dataset was used as the basis for the Web Almanac's metrics. For more information, see the Methodology page.
+      </div>
+      <button>
+        See the Methodology
+      </button>
+      <img src="/static/images/camada-760.png" />
+    </div>
+  </section>
+  <footer class="footer">
+    <div class="footer-container">
+      <section class="nav">
+        <img src="/static/images/home.png" />
+        <nav class="nav-items">
+          <img src="/static/images/ha-home.png" />
+          <li>
+            <a href="#">Contributors</a>
+          </li>
+          <li>
+            <a href="#">Methodology</a>
+          </li>
+        </nav>
+        <div class="explore">
+          {% if language is not none %}
+            <img src="/static/images/{{ language }}.png" />
+          {% else %}
+            <img src="/static/images/English.png" />
+          {% endif %}
+          <select class="language-switcher">
+            {% if supported_languages is iterable %}
+              {% for l in supported_languages %}
+                <option
+                  {% if l == language %}selected="selected"{% endif %}
+                  value="{{ url_for(request.endpoint, **get_view_args(lang=l.lang_code)) }}">
+                  {{ l }}
+                </option>
+              {% endfor %}
+            {% endif %}
+          </select>
+          <img src="/static/images/dropdown-arrow.png" />
+        </div>
+      </section>
+      <hr>
+      <div class="misc">
+        <div>
+          Copyright © 2019 Web Almanac. All rights reserved.
+        </div>
+        <div class="social-media">
+            <img src="/static/images/twitter.png" />
+            <img src="/static/images/github.png" />
+        </div>
+      </div>
+    </div>
+  </footer>
+</div>
 {% endblock %}
