--- a/src/templates/en/splash.html
+++ b/src/templates/en/splash.html
@@ -5,7 +5,7 @@ The Web Almanac by HTTP Archive
 {% endblock %}
 
 {% block styles %}
-  <link rel="stylesheet" href="/static/css/splash.css">
+  <link rel="stylesheet" href="/static/css/main.css">
 {% endblock %}
 
 {% block main %}
