--- a/src/templates/en/index.html
+++ b/src/templates/en/index.html
@@ -7,6 +7,7 @@ The Web Almanac by HTTP Archive
 {% block styles %}
   <link rel="stylesheet" href="/static/css/index.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato&display=swap">
 {% endblock %}
 
 {% block content %}
@@ -26,7 +27,7 @@ The Web Almanac by HTTP Archive
             <button>
               2019 Edition
             </button>
-            <img src="/static/images/dropdown-arrow.png" />
+            <img class="dropdown-arrow" src="/static/images/dropdown-arrow.png" />
           {% endif %}
         </div>
       </nav>
@@ -50,9 +51,10 @@ The Web Almanac by HTTP Archive
             {% endfor %}
           {% endif %}
         </select>
-        <img src="/static/images/dropdown-arrow.png" />
+        <img class="dropdown-arrow" src="/static/images/dropdown-arrow.png" />
       </div>
-      <img class="menu" src="/static/images/menu.png" />
+      <img class="menu-icon" src="/static/images/menu.png" />
+      <img class="hidden menu-close-icon" src="/static/images/cross.png" />
     </section>
     <section class="intro-container">
       <div class="intro">
@@ -61,19 +63,64 @@ The Web Almanac by HTTP Archive
           <b>HTTP Archive's</b> annual<br>
           <b>state of the web</b> report
         </h2>
-        <div>
+        <p>
           Our mission is to combine the raw stats and trends of the HTTP Archive with the expertise of the web community. The Web Almanac is a comprehensive report on the state of the web, backed by real data and trusted web experts. It is comprised of 20 chapters spanning aspects of page content, user experience, publishing, and distribution.
-        </div>
+        </p>
         <button>
           Start exploring
         </button>
       </div>
       <div class="intro-year">2019</div>
-      <div class="intro-image">
-        <img class="home-browser" src="/static/images/home-browser.png" />
-        <img class="camada-751" src="/static/images/camada-751.png" />
-        <img class="camada-759" src="/static/images/camada-759.png" />
-        <img class="camada-752" src="/static/images/camada-752.png" />
+      <div class="intro-image-container">
+        <div class="intro-image">
+          <img class="home-browser" src="/static/images/home-browser.png" />
+          <img class="camada-751" src="/static/images/camada-751.png" />
+          <img class="camada-759" src="/static/images/camada-759.png" />
+          <img class="camada-752" src="/static/images/camada-752.png" />
+        </div>
+      </div>
+      <div class="hidden menu">
+        <li>
+          <a href="#">Table of Contents</a>
+        </li>
+        <li>
+          <a href="#">Contributors</a>
+        </li>
+        <li>
+          <a href="#">Methodology</a>
+        </li>
+        <div>
+          <a href="https://httparchive.org/">
+            <img src="/static/images/ha-home.png" alt="" />
+          </a>
+          <div class="social-media">
+            <a href="https://twitter.com/HTTPArchive">
+              <img src="/static/images/twitter.png" alt="" />
+            </a>
+            <a href="https://github.com/HTTPArchive/almanac.httparchive.org">
+              <img src="/static/images/github.png" alt="" />
+            </a>
+          </div>
+          <div class="explore">
+            {% if language is not none %}
+              <img src="/static/images/{{ language }}.png" />
+            {% else %}
+              <img src="/static/images/English.png" />
+            {% endif %}
+            <select class="language-switcher">
+              {% if supported_languages is iterable %}
+                {% for l in supported_languages %}
+                  <option
+                    {% if l == language %}selected="selected"{% endif %}
+                    value="{{ url_for(request.endpoint, **get_view_args(lang=l.lang_code)) }}">
+                    {{ l }}
+                  </option>
+                {% endfor %}
+              {% endif %}
+            </select>
+            <img class="dropdown-arrow" src="/static/images/dropdown-arrow.png" />
+          </div>
+        </div>
       </div>
     </section>
   </header>
@@ -83,7 +130,7 @@ The Web Almanac by HTTP Archive
       <h2>Mobile Web</h2>
       <div class="quote-text">
         <img class="quote" src="/static/images/quote.png" />
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim facilisis gravida neque convallis a cras semper auctor neque.
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim facilisis gravida neque convallis a cras semper auctor neque.</p>
       </div>
       <div class="mobile-web-data">
         <div class="mobile-web-data-item">
@@ -108,9 +155,9 @@ The Web Almanac by HTTP Archive
     <div class="rectangles"></div>
     <div class="contributors">
       <h1>Contributors</h1>
-      <div>
+      <p>
         The Web Almanac has been made possible by the hard work of the web community. 91 people have volunteered countless hours in the planning, research, writing and production phases.
-      </div>
+      </p>
       <button>
         See the contributors
       </button>
@@ -148,13 +195,13 @@ The Web Almanac by HTTP Archive
           </div>
         </div>
       </div>
-      <div class="methodology-info">
+      <p class="methodology-info">
         Unless otherwise noted, the metrics in all of the 20 chapters of the Web Almanac are sourced from the HTTP Archive dataset. HTTP Archive is a community-run project that has been tracking how the web is built since 2010. Using WebPageTest and Lighthouse under the hood, metadata about nearly 6 million websites are tested monthly and included in a public BigQuery database for analysis. The July 2019 dataset was used as the basis for the Web Almanac's metrics. For more information, see the Methodology page.
-      </div>
+      </p>
       <button>
         See the Methodology
       </button>
-      <img src="/static/images/camada-760.png" />
+      <img class="camada-760" src="/static/images/camada-760.png" />
     </div>
   </section>
   <footer class="footer">
@@ -187,20 +234,56 @@ The Web Almanac by HTTP Archive
               {% endfor %}
             {% endif %}
           </select>
-          <img src="/static/images/dropdown-arrow.png" />
+          <img class="dropdown-arrow" src="/static/images/dropdown-arrow.png" />
         </div>
       </section>
-      <hr>
+      <hr class="line-break">
+      <div class="footer-mobile-nav">
+        <li>
+          <a href="#">Table of Contents</a>
+        </li>
+        <li>
+          <a href="#">Contributors</a>
+        </li>
+        <li>
+          <a href="#">Methodology</a>
+        </li>
+        <div>
+          <a href="https://httparchive.org/">
+            <img src="/static/images/ha-home.png" alt="" />
+          </a>
+          <div class="social-media">
+            <a href="https://twitter.com/HTTPArchive">
+              <img src="/static/images/twitter.png" alt="" />
+            </a>
+            <a href="https://github.com/HTTPArchive/almanac.httparchive.org">
+              <img src="/static/images/github.png" alt="" />
+            </a>
+          </div>
+        </div>
+      </div>
+      <hr class="line-break">
       <div class="misc">
         <div>
           Copyright © 2019 Web Almanac. All rights reserved.
         </div>
-        <div class="social-media">
-            <img src="/static/images/twitter.png" />
-            <img src="/static/images/github.png" />
+        <div>
+          <div class="social-media">
+            <a href="https://twitter.com/HTTPArchive">
+              <img src="/static/images/twitter.png" alt="" />
+            </a>
+            <a href="https://github.com/HTTPArchive/almanac.httparchive.org">
+              <img src="/static/images/github.png" alt="" />
+            </a>
+          </div>
         </div>
       </div>
     </div>
   </footer>
 </div>
+{% endblock %}
+
+{% block scripts %}
+  {{ super() }}
+  <script src="/static/js/home.js"></script>
 {% endblock %}
