Custom error page, forced lang in URL (#211)
* base design

* more site styles

* styles

* small desktop sizing

* characters

* hmmm

* Implement header background image (#181)

* contributors design

* outline design

* fix responsive of home page (#183)

* fix responsive of home page

* svg wrapper to abolition,  include text in image

* centerling text for mobile

* mark up a hero image

* fixed intro part page design

* fixed logo font on homepage (#190)

* add decorative lines on the homepage (#191)

* add decorative lines on the homepage

* fixed mistakes in pc layout

* fixed mistakes in pc layout

* Create and optimize large and small hero images (#203)

* Create and optimize large and small hero images

* Removed duplicate XL image archive.

* Corrected misplaced hero images

* people deletion and responsive support (#207)

* Add design methodology (#205)

* added methodology layout

* delete placeholder images and adjust margin

* align header and footer width when mobile

* add subtitle section style

* horizontal scrolling of code blocks

* error page design

--- a/src/templates/en/2019/contributors.html
+++ b/src/templates/en/2019/contributors.html
@@ -91,7 +91,7 @@
 {% endblock %}
 
 {% block main %}
-<section id="main">
+<section class="main">
   <h1>
     <span id="filtered-contributors">{{ config.contributors.items() | length }}</span>
     Contributors
@@ -128,7 +128,7 @@
     {% endfor %}
     </div>
   </div>
-</div>
+</section>
 {% endblock %}
 
 {% block scripts %}
