--- a/src/templates/en/2019/outline.html
+++ b/src/templates/en/2019/outline.html
@@ -40,7 +40,7 @@
 {% endblock %}
 
 {% block main %}
-<section id="main">
+<section class="main">
   <h1>Table of Contents</h1>
   {% for part_config in config.outline %}
     <section class="part">
