--- a/src/templates/en/2019/base.html
+++ b/src/templates/en/2019/base.html
@@ -8,17 +8,18 @@
 {% block content%}
   {% block header %}
     <header class="alt-bg">
-      <img src="/static/images/logo.png" />
+      <a href="{{ url_for('home', year=year, lang=lang) }}"><img src="/static/images/logo.png" /></a>
       <nav>
-        <a href="{{ url_for('contributors', year=year, language=language) }}">Contributors</a>
-        <a href="{{ url_for('methodology', year=year, language=language) }}">Methodology</a>
+        <a href="{{ url_for('outline', year=year, lang=lang) }}">Table of Contents</a>
+        <a href="{{ url_for('contributors', year=year, lang=lang) }}">Contributors</a>
+        <a href="{{ url_for('methodology', year=year, lang=lang) }}">Methodology</a>
         {% if supported_years | length > 1 %}
           {{ year_switcher() }}
         {% endif %}
       </nav>
       <div class="cta">
         {% if request.endpoint == 'home' %}
-          <a href="{{ url_for('outline', year=year, language=language) }}" class="alt btn">
+          <a href="{{ url_for('outline', year=year, lang=lang) }}" class="alt btn">
             Start Exploring
           </a>
         {% endif %}
@@ -27,9 +28,9 @@
       <img class="menu-icon" src="/static/images/menu.png" />
       <img class="menu-close-icon" src="/static/images/close.png" />
       <nav class="menu">
-        <a href="{{ url_for('outline', year=year, language=language) }}">Table of Contents</a>
-        <a href="{{ url_for('contributors', year=year, language=language) }}">Contributors</a>
-        <a href="{{ url_for('methodology', year=year, language=language) }}">Methodology</a>
+        <a href="{{ url_for('outline', year=year, lang=lang) }}">Table of Contents</a>
+        <a href="{{ url_for('contributors', year=year, lang=lang) }}">Contributors</a>
+        <a href="{{ url_for('methodology', year=year, lang=lang) }}">Methodology</a>
         <div class="misc">
           <a href="https://httparchive.org/">
             <img src="/static/images/ha-home.png" alt="HTTP Archive home" />
@@ -53,19 +54,19 @@
   {% block footer %}
     <footer class="alt-bg">
       <section class="nav">
-        <img src="/static/images/logo.png" />
+        <a href="{{ url_for('home', year=year, lang=lang) }}"><img src="/static/images/logo.png" /></a>
         <nav class="nav-items">
           <img src="/static/images/ha-home.png" />
-          <a href="{{ url_for('contributors', year=year, language=language) }}">Contributors</a>
-          <a href="{{ url_for('methodology', year=year, language=language) }}">Methodology</a>
+          <a href="{{ url_for('contributors', year=year, lang=lang) }}">Contributors</a>
+          <a href="{{ url_for('methodology', year=year, lang=lang) }}">Methodology</a>
         </nav>
         {{ language_switcher() }}
       </section>
       <hr>
       <div class="footer-mobile-nav">
-        <a href="{{ url_for('outline', year=year, language=language) }}">Table of Contents</a>
-        <a href="{{ url_for('contributors', year=year, language=language) }}">Contributors</a>
-        <a href="{{ url_for('methodology', year=year, language=language) }}">Methodology</a>
+        <a href="{{ url_for('outline', year=year, lang=lang) }}">Table of Contents</a>
+        <a href="{{ url_for('contributors', year=year, lang=lang) }}">Contributors</a>
+        <a href="{{ url_for('methodology', year=year, lang=lang) }}">Methodology</a>
         <div>
           <a href="https://httparchive.org/">
             <img src="/static/images/ha-home.png" alt="HTTP Archive home" />
@@ -125,6 +126,7 @@ menuCloseIcon.addEventListener('click', toggleMenu);
 {% endblock %}
 
 {% macro language_switcher() %}
+{% if supported_languages | length > 1%}
 <div class="language-switcher">
   {% if language is not none %}
     <img src="/static/images/{{ language }}.png" class="flag" height="25" width="25" />
@@ -142,6 +144,7 @@ menuCloseIcon.addEventListener('click', toggleMenu);
   </select>
   <img class="dropdown-arrow" src="/static/images/dropdown-arrow.png" alt="open" height="20" width="20" />
 </div>
+{% endif %}
 {% endmacro %}
 
 {% macro year_switcher() %}
