--- a/src/templates/en/2019/index.html
+++ b/src/templates/en/2019/index.html
@@ -22,7 +22,7 @@ The Web Almanac by HTTP Archive
       <p>
         Our mission is to combine the raw stats and trends of the HTTP Archive with the expertise of the web community. The Web Almanac is a comprehensive report on the state of the web, backed by real data and trusted web experts. It is comprised of 20 chapters spanning aspects of page content, user experience, publishing, and distribution.
       </p>
-      <a href="{{ url_for('outline', year=year, language=language) }}" class="btn">
+      <a href="{{ url_for('outline', year=year, lang=lang) }}" class="btn">
         Start exploring
       </a>
     </div>
@@ -50,7 +50,7 @@ The Web Almanac by HTTP Archive
           <div>Lorem ipsum</div>
         </div>
       </div>
-      <a href="{{ url_for('chapter', year=year, chapter='mobile-web', language=language) }}" class="btn">
+      <a href="{{ url_for('chapter', year=year, chapter='mobile-web', lang=lang) }}" class="btn">
         Read the Mobile Web Chapter
       </a>
     </div>
@@ -61,7 +61,7 @@ The Web Almanac by HTTP Archive
       <p>
         The Web Almanac has been made possible by the hard work of the web community. 91 people have volunteered countless hours in the planning, research, writing and production phases.
       </p>
-      <a href="{{ url_for('contributors', year=year, language=language) }}" class="alt btn">
+      <a href="{{ url_for('contributors', year=year, lang=lang) }}" class="alt btn">
         See the contributors
       </a>
     </div>
@@ -74,7 +74,6 @@ The Web Almanac by HTTP Archive
   </section>
   <section class="methodology-container">
     <div class="methodology">
-      
       <h1><div class="decorative-line-center"></div>Methodology</h1>
       <div class="methodology-data">
         <div class="websites-tested">
@@ -97,10 +96,10 @@ The Web Almanac by HTTP Archive
       <p class="methodology-info">
         Unless otherwise noted, the metrics in all of the 20 chapters of the Web Almanac are sourced from the HTTP Archive dataset. HTTP Archive is a community-run project that has been tracking how the web is built since 2010. Using WebPageTest and Lighthouse under the hood, metadata about nearly 6 million websites are tested monthly and included in a public BigQuery database for analysis. The July 2019 dataset was used as the basis for the Web Almanac's metrics. For more information, see the Methodology page.
       </p>
-      <a href="{{ url_for('methodology', year=year, language=language) }}" class="alt btn">
+      <a href="{{ url_for('methodology', year=year, lang=lang) }}" class="alt btn">
         See the Methodology
       </a>
-      <img class="methodology-characters" src="/static/images/methodology-characters.png" alt="" /> 
+      <img class="methodology-characters" src="/static/images/methodology-characters.png" alt="" />
     </div>
   </section>
 </div>
